

Version 2
---------

First commit - commit 66bcc6e999646143f24f9602ecc95c982c2d07e7

Create Administrative Section with User CRUD and ruby acceptance testing. I have tried to work with phpunit for acceptance testing, but it constantly crashes whereas ruby works right out of the box.
Make sure you have ruby installed, preferably with rvm, move into the test directory, and then type 'bundle'. You may need to run 'gem install bundler' first. After that you should have everything installed.
Simply run rspec spec/test_spec.rb from the tests directory to run the tests. The last test is the only one that should fail.

protected/tests/functional/SiteTest.php -- I deleted this as we will not be using phpunit for acceptance testing. This file seems to show how to do this effectively though if you are interested
protected/tests/Gemfile -- This contains a list of dependancies for the ruby code.
protected/tests/Gemfile.lock -- Also contains dependancies. Ignore this file
protected/tests/spec/spec_helper.rb -- Contains code and variables needed for everytest
protected/tests/spec/test_spec.rb -- A basic test that makes sure the application works

protected/runtime/gii-1.1.13/CrudCode.php -- Not sure if this is nessisary. May be a temporary file
protected/controllers/UserController.php -- Runs code before displaying the user views
protected/views/layouts/main.php -- Added a link to the user admin page. This will only display when logged in, but you can still access the page without loggining in
protected/views/user/_form.php -- This page and below are the views for each of the forms for manipulating users
protected/views/user/_search.php
protected/views/user/_view.php
protected/views/user/admin.php
protected/views/user/create.php
protected/views/user/index.php
protected/views/user/update.php
protected/views/user/view.php

protected/views/user/_form.php -- Changed the role to a dropdown list